--- a/index.html
+++ b/index.html
@@ -4,21 +4,32 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
+<title>Cloud Chat | Chatly</title>
+
+  <!-- GEO INFO(S) -->
+    <meta name="dc.language" content="en">
+    <meta name="geo.country" content="US">
+
     <!-- STYLESHEETS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" >
     <link rel="stylesheet" href="css/chat.css">
 
-    <title>Firebase Cloud Chat</title>
+  <!-- DATA -->
+    <meta name="title" content="Chatly's Cloud Chat App">
+    <meta name="description" content="Chatly. Chat easy.">
+    <meta name="keywords" content="Chatly, chatly.isc, cloud.chatly.isc, chat, firebase, app">
   </head>
 
   <body>
+<!-- SITE START -->
+
     <div class="example-chat l-demo-container">
       <img class="example-chat-logo" src="images/cloud-chat-logo.png" />
 
       <header>
         <!-- APP TITLE -->
         <div class="example-chat-toolbar">
-          <h2>Cloud Chat App</h2>
+          <h2>Chatly's Cloud Chat App</h2>
         </div>
 
         <!-- NAME FIELD -->
@@ -45,5 +56,8 @@
 
     <!-- CHAT.JS FILE -->
     <script src="js/chat.js"></script>
+
+<!-- SITE END -->
   </body>
 </html>
+<!-- Build the <> with <3 by the Chatly team -->
